--- a/preseed.cfg
+++ b/preseed.cfg
@@ -1,30 +1,29 @@
-# Preseed file for Ubuntu Server installation
+# Preseed file for Ubuntu 22.04 Server
 
+# Locale settings
 d-i localechooser/language string en
 d-i localechooser/country string US
 d-i localechooser/locale string en_US.UTF-8
 
-d-i netcfg/get_hostname string ubuntu-server
-d-i netcfg/get_domain string example.com
+# Network configuration
+d-i netcfg/get_hostname string ubuntu
+d-i netcfg/get_domain string unassigned-domain
 
-d-i time/zone string America/New_York
-d-i clock-setup/utc boolean true
-d-i clock-setup/ntp boolean true
-d-i ntp/servers string ntp.ubuntu.com
+# Mirror settings
+d-i mirror/country string manual
+d-i mirror/http/hostname string archive.ubuntu.com
+d-i mirror/http/directory string /ubuntu
+d-i mirror/http/proxy string
 
-# Partitioning
-d-i partman-auto/method string regular
-d-i partman-auto/choose_recipe select atomic
-d-i partman/confirm boolean true
-d-i partman/confirm_nooverwrite boolean true
-
-# User setup
+# Account setup
 d-i passwd/user-fullname string User
 d-i passwd/username string user
-d-i passwd/user-password-crypted password $6$rounds=4096$saltsalt$hashedpassword
-d-i user-setup/allow-password-weak boolean true
+d-i passwd/user-password-crypted password $6$rounds=4096$randomsalt$hashedpassword
 
-# Install additional packages
+# Timezone
+d-i time/zone string America/New_York
+
+# Package selection
 tasksel tasksel/first multiselect standard, ubuntu-server
 
 # Finish installation
