--- a/preseed.cfg
+++ b/preseed.cfg
@@ -1,6 +1,7 @@
-# Preseed file for Ubuntu 22.04 Server
+# Preseed file for Ubuntu Server 22.04
 
 # Locale settings
+d-i localechooser/language-name string English
 d-i localechooser/language string en
 d-i localechooser/country string US
 d-i localechooser/locale string en_US.UTF-8
@@ -15,16 +16,28 @@ d-i mirror/http/hostname string archive.ubuntu.com
 d-i mirror/http/directory string /ubuntu
 d-i mirror/http/proxy string
 
-# Account setup
-d-i passwd/user-fullname string User
-d-i passwd/username string user
-d-i passwd/user-password-crypted password $6$rounds=4096$randomsalt$hashedpassword
+# Partitioning
+d-i partman-auto/method string regular
+d-i partman-auto/choose_recipe select atomic
+d-i partman/confirm boolean true
+d-i partman/confirm_nooverwrite boolean true
 
-# Timezone
+# User setup
+d-i passwd/user-fullname string Ubuntu User
+d-i passwd/username string ubuntu
+d-i passwd/user-password-crypted password $6$rounds=4096$randomsalt$randomhashedpassword
+d-i user-setup/allow-password-weak boolean true
+
+# Time zone
 d-i time/zone string America/New_York
 
 # Package selection
 tasksel tasksel/first multiselect standard, ubuntu-server
+
+# Install additional packages
+d-i pkgsel/include string openssh-server
+d-i pkgsel/include string vim
+d-i pkgsel/include string curl
 
 # Finish installation
 d-i finish-install/reboot_in_progress note
