--- a/preseed.cfg
+++ b/preseed.cfg
@@ -1,5 +1,8 @@
 # Preseed file for Ubuntu Server 22.04
 
+# Time zone
+d-i time/zone string America/New_York
+
 # Locale settings
 d-i localechooser/language-name string English
 d-i localechooser/language string en
